added problem page

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -158,3 +158,25 @@ a {
 		color: #fff !important;		
 	}
 }
+
+.problem{
+	h2{
+		margin-bottom: 18px;
+		margin-top: 25px;
+	}
+	.description,
+	.input,
+	.output,
+	.hint,
+	.source{
+		font-family: Georgia, "Times New Roman", Times, serif;
+		font-size: 13pt;
+	}
+	
+	.sinput,
+	.soutput{
+		font-size: 13pt;
+		line-height: 13pt;
+		font-family: Courier New,Courier,monospace;
+	}
+}
