added app.css versioning

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -27,6 +27,7 @@ a {
   }
 }
 
+.checkbox,
 .pagination{
 	.user-select(none);	
 	*{
@@ -166,6 +167,7 @@ a {
 	a{
 		color: #fff !important;		
 	}
+	font-size: 1.2em;
 }
 
 .problem{
@@ -188,4 +190,37 @@ a {
 		line-height: 13pt;
 		font-family: Courier New,Courier,monospace;
 	}
+}
+
+.login_google {
+	.user-select(none);	
+	.rounded(2px);
+	background-color: #d43a2b;
+	display: block;
+	color: #fff;
+	width: 190px;
+	height: 33px;
+	line-height: 33px;
+	text-shadow: none;
+	cursor: pointer;
+	margin: 5px 0;
+	text-decoration: none;
+	text-align: center;
+	font-size: 1.2em;
+}
+.login_github {
+	.user-select(none);	
+	.rounded(2px);
+	background-color: #343434;
+	color: #fff;
+	display: block;
+	width: 190px;
+	height: 33px;
+	line-height: 33px;
+	text-shadow: none;
+	cursor: pointer;
+	margin: 5px 0;
+	text-decoration: none;
+	text-align: center;
+	font-size: 1.2em;
 }
