added problem page session ability

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -6,6 +6,7 @@
 @tune-color: #323a43;
 @navbar-height: 55px;
 @navbar-padding-v: (@navbar-height - 22)/2px;
+@light-gray-color: #ccc;
 
 body, label, .checkbox label {
 	font-weight: 300;
@@ -182,6 +183,11 @@ a {
 	font-size: 1.2em;
 }
 
+.problems{
+	.analysis_sign{
+		color: @light-gray-color;
+	}
+}
 .problem{
 	h2{
 		margin-bottom: 18px;
@@ -194,6 +200,7 @@ a {
 	.source{
 		font-family: Georgia, "Times New Roman", Times, serif;
 		font-size: 13pt;
+		line-height: 1.5em;
 	}
 	
 	.sinput,
@@ -202,6 +209,7 @@ a {
 		line-height: 13pt;
 		font-family: Courier New,Courier,monospace;
 	}
+	margin-bottom: 3em;
 }
 
 .loginbtn{
