move helper function to model

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -227,19 +227,20 @@ a {
 .feed-item{
 	font-size: 13px;
 	font-weight: normal;
-	height: 46px;
-	line-height: 46px;
+	height: 42px;
+	line-height: 42px;
 	border-bottom: 1px solid #f3f3f3;
 	color: #666;
 	
 	.glyphicon{
 		color: @light-gray-color;
+		margin-right: 10px;
 	}
 	.date{
 		color: @light-gray-color;
 		font-size: 12px;
 	}
-	.S_AC{color:#090}
+	.S_AC{}
 	.S_TL{}
 	.S_ML{}
 	.S_WA{}
