--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -49,6 +49,9 @@ body {
 			margin-right: 5px;
 			.box-shadow(0 1px 1px rgba(0,0,0,.225));
 		}
+		a{
+			color: #000;
+		}
 	}
 	.navbar-nav {
 	  	li {
