added github login support

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -4,7 +4,6 @@
 @link-color: #4183c4;
 @btn-font-weight: 300;
 @font-family-sans-serif: "Roboto", Helvetica, Arial, sans-serif;
-@tune-color: #323a43;
 //@navbar-height: 55px;
 //@navbar-padding-v: (@navbar-height - 22)/2px;
 @light-gray-color: #ccc;
@@ -142,12 +141,8 @@ a {
 }
 
 .panel-heading{
-	background-color: lighten(@tune-color,20%) !important;
-	color: #fff !important;
-	a{
-		color: #fff !important;		
-	}
 	font-size: 1.2em;
+	font-weight: @font-bold;
 }
 
 .problems{
