remove google login

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -220,6 +220,15 @@ a {
 	    background-color: darken(#343434, 15%);
 	}
 }
+.login_twitter{
+	background-color: #019FE9;
+	&:hover{
+	    background-color: darken(#019FE9, 7%);
+	}
+	&:active{
+	    background-color: darken(#019FE9, 15%);
+	}
+}
 
 .feed-item{
 	font-size: 13px;
