added submit status css rules

--- a/resources/assets/less/admin.less
+++ b/resources/assets/less/admin.less
@@ -475,3 +475,13 @@ table.dataTable thead .sorting:after {
     color: #df8a13;
 }
 
+.submits{
+	.S_AC{color:#090;font-weight:@font-bold;}
+	.S_TL{color:#900}
+	.S_ML{color:#900}
+	.S_WA{color:#900}
+	.S_PE{color:#900}
+	.S_RE{color:#900}
+	.S_OL{color:#900}
+	.S_FL{color:#900}
+}
